src/app.css
@font-face {
    font-family: CalSans;
    src:url(/Font/CalSans-Regular.ttf);
}
:root{
    --ws-d1: hsl(343, 90%, 81%);
    --ws-d2: hsl(339, 94%, 93%);
    --ws-d3: hsl(316, 16%, 28%);
    --ws-d4: hsl(331, 89%, 68%);
    --ws-d5: hsl(32, 84%, 88%);
}
body {
    font-family: CalSans;
    color: whitesmoke;
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    background-color: black;
    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(/assets/main-icon.webp); 
    background-size: cover; 
    background-position: center; 
    background-repeat: no-repeat; 
    -webkit-tap-highlight-color: transparent;
    backdrop-filter: blur(30px);
}
main {
    margin-left: 2cm;
    margin-right: 2cm;
    flex: 1; 
}
@media (min-width: 1024px){
  main {
    margin-left: 10cm;
    margin-right: 10cm;
  } 
  body {
    background-size: cover, calc(100% - 6rem); 
    background-position: center, center;
    background-repeat: no-repeat, no-repeat;
  }
}
.titleSpan{
    text-decoration: none;
    color: var(--ws-d4);
    transition: color 0.25s;
}
.titleSpan:hover{color: var(--ws-d1);}
.titleSpan:active{color: var(--ws-d2);}
a{color: var(--ws-d2);}
a:visited{color: var(--ws-d4);}
.socialBtns{
    font-family: CalSans;
    background-color: var(--ws-d5);
    color: var(--ws-d3);
    border: none;
    cursor: pointer;
    padding: 8px 16px;
    margin: 5px;
    font-size: 1.1em;
    transition: background-color 0.25s;
}
.socialBtns:hover{
    background-color: var(--ws-d1);
    border-radius: 10px;
    transition: border-radius 0.25s, background-color 0.25s, color 0.25s ease;
}
.socialBtns:not(:hover){
    border-radius: 14px;
    transition: border-radius 0.25s, background-color 0.25s, color 0.25s ease;
}
.socialBtns:active{
    background-color: var(--ws-d3);
    color: var(--ws-d2);
}
footer {
    cursor: default;
    color: whitesmoke;
    text-align: center;
    padding: 24px 16px; 
    width: 100%; 
    box-sizing: border-box;
    font-family: CalSans;
    font-size: 14px;
    margin-top: auto;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
.about-container{
    display: flex;
    flex-direction: row;
    gap: 20px;
}
#dc-avatar{
    margin: 20px auto;
    border-radius: 50px;
    width: 220px;
    height: 220px;
    object-fit: cover;
}
#dc-avatar:hover{
    z-index: 1;
    border-radius: 20px; 
    transition: border-radius 0.3s ease; 
    transform: scale(1.1); 
    transition:  0.5s ease; 
    filter: brightness(1); 
    box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.5); 
}
#dc-avatar:not(:hover){
    z-index: 0;
    transition: border-radius 0.3s ease; 
    transform: scale(1);
    transition: 0.25s ease;
}
@media (max-width: 1023px){
    .about-container{
        flex-direction: column;
        align-items: center;
    }
    
}
.contact-form-input, .contact-form-textarea{
    background-color: var(--ws-d2);
    border-radius: 10px;
    border: 1px solid var(--ws-d3);
    color: var(--ws-d3);
    padding: 10px;  
    font-family: inherit;
    transition: all 0.2s ease;
    resize: none;
}
#contact-form-btn{
    align-self: flex-end;
    background-color: var(--ws-d1);
    color: var(--ws-d2);
    font-weight: bold;
    border: solid var(--ws-d3) 2px;
    padding: 10px 16px;
    border-radius: 14px;
    cursor: pointer;
}
#contact-form-btn:hover{
    background-color: var(--ws-d2);
    color: var(--ws-d3);
    border-radius: 10px;
    transition: border-radius 0.25s, background-color 0.25s, color 0.25s ease;
}
#contact-form-btn:not(:hover){
    background-color: var(--ws-d1);
    color: var(--ws-d2);
    border-radius: 14px;
    transition: border-radius 0.25s, background-color 0.25s, color 0.25s ease;
}

